# django-react-tools

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: python-publish.yml  python-test.yml
develop/: manage.py
develop/develop/: settings.py  urls.py  wsgi.py
develop/static_react/js/: 2.chunk.js  main.chunk.js  runtime-main.js
develop/templates/: base.html
docs/: Makefile  conf.py  index.md  index.rst  make.bat
react-test-app/: package-lock.json  package.json
reacttools/: admin.py  apps.py  models.py  urls.py  views.py
reacttools/management/commands/: collectreact.py
reacttools/migrations/: 0001_initial.py  0002_auto_20190612_1911.py  0003_reactappsettings_build_path.py  0004_auto_20190612_1923.py  0005_reactappsettings_build_cmd.py  0006_auto_20190612_2054.py  0007_auto_20190612_2059.py  0008_reactappsettings_static_path_prefix.py  0009_auto_20190612_2113.py  0010_auto_20190612_2123.py  0011_reactappsettings_react_root.py  0012_auto_20210930_1120.py
reacttools/templates/reacttools/: react_app_view.html
src/reacttools/: admin.py  models.py  urls.py  views.py
src/reacttools/migrations/: 0001_initial.py  0002_auto_20190612_1911.py  0003_reactappsettings_build_path.py  0004_auto_20190612_1923.py  0006_auto_20190612_2054.py  0007_auto_20190612_2059.py  0008_reactappsettings_static_path_prefix.py  0009_auto_20190612_2113.py  0010_auto_20190612_2123.py  0011_reactappsettings_react_root.py  0012_auto_20210930_1120.py
(+2 files in other folders)
